PID & Deamonized & Supervised Configs Fixed

--- a/templates/redis.conf.j2
+++ b/templates/redis.conf.j2
@@ -1,6 +1,5 @@
-daemonize                       yes
+supervised                      systemd
 dir                             "/var/lib/redis/6379"
-pidfile                         "/var/run/redis.pid"
 port                            6379
 bind                            127.0.0.1
 timeout                         0
